<?xml version="1.0" encoding="ISO-8859-1"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>2.1.0.RC1</version>
  </parent>

  <groupId>org.geogig.web</groupId>
  <artifactId>parent</artifactId>
  <version>0.2-SNAPSHOT</version>
  <packaging>pom</packaging>
  <name>GeoGig Open API</name>

  <modules>
    <module>modules/openapi</module>
    <module>modules/java</module>
  </modules>

  <scm>
    <url>https://github.com/boundlessgeo/geogig-web</url>
    <connection>scm:git:git://github.com/boundlessgeo/geogig-web.git</connection>
    <developerConnection>scm:git:git@github.com:boundlessgeo/geogig-web</developerConnection>
  </scm>

  <properties>
    <!-- TODO: match spring-boot-maven-plugin to release version when out of SNAPSHOT for spring boot -->
    <spring-boot-maven-plugin.version>2.1.0.RC1</spring-boot-maven-plugin.version>
    <java.version>8</java.version>
    <aspectj.version>1.9.2</aspectj.version>
    <maven.compiler.source>${java.version}</maven.compiler.source>
    <maven.compiler.target>${java.version}</maven.compiler.target>
    <maven-surefire-plugin.version>2.19.1</maven-surefire-plugin.version> <!-- greatest version that currently works with Java9 modules. Current latest is 2.22.0 -->
    <main.basedir>${project.basedir}</main.basedir>
    <geogig.version>1.4-SNAPSHOT</geogig.version>
    <postgresql.version>42.2.1</postgresql.version>
    <gt.version>20.0</gt.version>
    <jts.version>1.16.0-RC1</jts.version>
    <guava.version>24.1.1-jre</guava.version>
    <jdt-annotation.version>1.1.0</jdt-annotation.version>
    <springfox-version>2.9.2</springfox-version>
    <lombok.version>1.18.2</lombok.version>

    <swagger-core-version>1.5.21</swagger-core-version>
    <swagger-annotations-version>1.5.12</swagger-annotations-version>
    <swagger-codegen-maven-plugin.version>2.3.1</swagger-codegen-maven-plugin.version>

    <spring-security.version>5.1.1.RELEASE</spring-security.version>
    <testfx.version>4.0.14-alpha</testfx.version>
  </properties>

  <licenses>
    <license>
      <name>Eclipse Distribution License</name>
      <url>https://www.eclipse.org/org/documents/edl-v10.html</url>
      <distribution>repo</distribution>
      <comments>The Eclipse Distribution License (a BSD-3 style license)</comments>
    </license>
  </licenses>
  <pluginRepositories>
    <pluginRepository>
      <id>Spring plugins</id>
      <url>https://repo.spring.io/plugins-release</url>
      <releases>
        <enabled>true</enabled>
      </releases>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </pluginRepository>
  </pluginRepositories>
  <repositories>
    <repository>
      <id>Spring plugins</id>
      <url>https://repo.spring.io/plugins-release</url>
      <releases>
        <enabled>true</enabled>
      </releases>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </repository>
    <repository>
      <id>spring-libs-snapshot</id>
      <name>Spring Snapshot Repository</name>
      <url>http://repo.spring.io/libs-snapshot</url>
      <releases>
        <enabled>false</enabled>
      </releases>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
    </repository>
    <repository>
      <id>boundless</id>
      <name>Boundless Maven Repository</name>
      <url>https://repo.boundlessgeo.com/main/</url>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
    </repository>
    <repository>
      <id>locationtech</id>
      <name>Locationtech Geogig Snapshot Repository</name>
      <url>https://repo.locationtech.org/content/groups/snapshots/</url>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
    </repository>
    <repository>
      <id>locationtech-releases</id>
      <name>Locationtech Geogig Releases Repository</name>
      <url>https://repo.locationtech.org/content/groups/releases/</url>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </repository>
    <repository>
      <id>osgeo</id>
      <name>Open Source Geospatial Foundation Repository</name>
      <url>http://download.osgeo.org/webdav/geotools/</url>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
    </repository>
  </repositories>
  <distributionManagement>
    <repository>
      <id>boundless</id>
      <name>Boundless Release Repository</name>
      <url>https://repo.boundlessgeo.com/release/</url>
    </repository>
    <snapshotRepository>
      <id>boundless</id>
      <name>Boundless Snapshot Repository</name>
      <url>https://repo.boundlessgeo.com/snapshot/</url>
    </snapshotRepository>
  </distributionManagement>


  <build>
    <resources>
      <resource>
        <directory>${project.basedir}/src/main/resources</directory>
        <filtering>false</filtering>
        <includes>
          <include>**/*</include>
        </includes>
      </resource>
    </resources>

    <extensions>
      <extension>
        <groupId>org.apache.maven.wagon</groupId>
        <artifactId>wagon-webdav</artifactId>
        <version>1.0-beta-2</version>
      </extension>
    </extensions>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-shade-plugin</artifactId>
          <version>3.2.0</version>
        </plugin>
        <plugin>
          <groupId>rg.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.8.0</version>
        </plugin>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>versions-maven-plugin</artifactId>
          <version>2.7</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>2.22.1</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-failsafe-plugin</artifactId>
          <version>2.22.1</version>
        </plugin>
        <plugin>
          <groupId>io.swagger</groupId>
          <artifactId>swagger-codegen-maven-plugin</artifactId>
          <version>${swagger-codegen-maven-plugin.version}</version>
        </plugin>

        <plugin>
          <groupId>pl.project13.maven</groupId>
          <artifactId>git-commit-id-plugin</artifactId>
          <version>2.2.2</version>
        </plugin>
        <plugin>
          <!-- generates OS specific scripts for starting java applications see http://mojo.codehaus.org/appassembler/appassembler-maven-plugin/index.html -->
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>appassembler-maven-plugin</artifactId>
          <version>${appassembler.plugin.version}</version>
        </plugin>
      </plugins>
    </pluginManagement>

    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <release>${java.version}</release>
          <debug>true</debug>
          <encoding>UTF-8</encoding>
          <compilerArgs>
          </compilerArgs>
          <fork>true</fork>
        </configuration>
        <dependencies>
          <dependency>
            <groupId>org.ow2.asm</groupId>
            <artifactId>asm</artifactId>
            <version>7.0-beta</version>
          </dependency>
        </dependencies>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <argLine>
            --illegal-access=permit
          </argLine>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-failsafe-plugin</artifactId>
        <configuration>
          <argLine>
            --illegal-access=permit
          </argLine>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-enforcer-plugin</artifactId>
        <executions>
          <execution>
            <id>enforce-maven</id>
            <goals>
              <goal>enforce</goal>
            </goals>
            <configuration>
              <rules>
                <requireMavenVersion>
                  <version>3.5.4</version>
                </requireMavenVersion>
              </rules>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>versions-maven-plugin</artifactId>
        <configuration>
          <generateBackupPoms>false</generateBackupPoms>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <configuration>
          <archive>
            <manifest>
              <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
              <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
            </manifest>
          </archive>
        </configuration>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>test-jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <inherited>true</inherited>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <configuration>
          <attach>true</attach>
        </configuration>
        <executions>
          <execution>
            <id>attach-sources</id>
            <goals>
              <goal>jar</goal>
              <goal>test-jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>javax.inject</groupId>
        <artifactId>javax.inject</artifactId>
        <version>1</version>
      </dependency>
      <dependency>
        <groupId>javax.activation</groupId>
        <artifactId>activation</artifactId>
        <version>1.1.1</version>
      </dependency>
      <dependency>
        <groupId>org.projectlombok</groupId>
        <artifactId>lombok</artifactId>
        <version>${lombok.version}</version>
        <scope>provided</scope>
      </dependency>
      <dependency>
        <groupId>org.postgresql</groupId>
        <artifactId>postgresql</artifactId>
        <version>${postgresql.version}</version>
      </dependency>
      <dependency>
        <groupId>org.testfx</groupId>
        <artifactId>testfx-core</artifactId>
        <version>${testfx.version}</version>
        <scope>test</scope>
        <exclusions>
          <exclusion>
            <groupId>org.testfx</groupId>
            <artifactId>testfx-internal-java8</artifactId>
          </exclusion>
        </exclusions>
      </dependency>
      <dependency>
        <groupId>org.testfx</groupId>
        <artifactId>testfx-internal-java9</artifactId>
        <version>${testfx.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.testfx</groupId>
        <artifactId>testfx-junit</artifactId>
        <version>${testfx.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.awaitility</groupId>
        <artifactId>awaitility</artifactId>
        <version>3.1.2</version>
        <scope>test</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
    </dependency>
  </dependencies>
</project>
